# HomeWork

10.1/: main.cpp
10.2/: main.cpp
10.3/: main.cpp
10.4/: main.cpp
10.5/: main.cpp
11.1/: main.cpp
11.2/: main.cpp
11.3/: main.cpp
11.4/: main.cpp
12.1/: main.cpp
12.2/: main.cpp
12.3/: main.cpp
13.1/: main.cpp
13.2/: main.cpp
13.3/: main.cpp
13.4/: main.cpp
13.5/: main.cpp
13.6/: main.cpp
13.7/: main.cpp
13.8/: main.cpp
13.sea_fight/: main.cpp
14.1/: main.cpp
14.2/: main.cpp
14.3/: main.cpp
14.4/: main.cpp
15.1/: main.cpp
15.2/: main.cpp
15.3/: main.cpp
15.4/: main.cpp
15.5/: main.cpp
16.1/: main.cpp
16.2/: main.cpp
16.3/: main.cpp
17.1/: main.cpp
17.2/: main.cpp
17.3/: main.cpp
17.4/: main.cpp
18.1/: book.txt  main.cpp
18.2/: book.txt  main.cpp
18.3/: main.cpp
18.4/: main.cpp
18.5/: main.cpp
19.1/: data.txt  main.cpp
19.2/: main.cpp  pic.txt
19.3/: basket.txt  main.cpp  river.txt
19.4/: atm.txt  main.cpp
20.1/: data.txt  main.cpp
20.2/: main.cpp
20.3/: main.cpp
20.4/: main.cpp
21.1/: main.cpp
21.2/: main.cpp
21.3/: main.cpp
22.1/: main.cpp
22.2/: main.cpp
22.3/: main.cpp
23.1/: main.cpp
23.2/: main.cpp
23.3/: main.cpp
24.1/: CMakeLists.txt
24.2/: CMakeLists.txt
24.2/src/: CMakeLists.txt  cpu.cpp  disk.cpp  gpu.cpp  kbd.cpp  main.cpp  ram.cpp
25.1/: CMakeLists.txt
25.1/src/: CMakeLists.txt  main.cpp  play.txt  player.cpp  track.cpp  tracks.txt
25.2/: CMakeLists.txt
25.3/: CMakeLists.txt
26.1/: CMakeLists.txt
26.2/: CMakeLists.txt
(+45 files in other folders)
